# hs15-talk

./: .gitignore  Gruntfile.js  Makefile  hs15.markdown  main.hs.tmpl  module.hs.tmpl  reflexmodule.hs.tmpl  slides.cabal  stack.yaml
css/: custom.css  hk-espresso.css
pandoc-filter/: filter.hs  pandoc-filter.cabal
sass/: braje-white.scss  braje.scss
src/: .gitignore  Common.hs  CommonReflex.hs
